backport(1.20.1): paper module on 1.20.1 dev bundle with REOBF_PRODUCTION (harvested)
Harvested from the paper research lane's worktree (agent stopped before its
report; implementation was test-complete). paperweight-userdev 2.0.0-beta.21
works with paperDevBundle 1.20.1-R0.1-SNAPSHOT unchanged. Production Paper
1.20.1 is spigot-mapped: REOBF_PRODUCTION makes reobfJar the release artifact
(release naming; mojang shadow jar renamed lss-paper-mojang-dev, outside the
publish glob); soakReobfJar twin feeds runSoakServer/runFolia (real 1.20.1
servers reject mojang-mapped jars). Verified earlier in the worktree: manifest
paperweight-mappings-namespace: spigot + genuinely spigot-mapped class refs.

api-version '1.20' (Bukkit <=1.20.4 accepts two-part only) + truncation
contract test; release_check.py expects the spigot namespace now. Source drift:
pattern-switches -> if-else (Java 17), serverLevel()/location(), old NBT API,
TestContainerFactory test shim for the absent PalettedContainerFactory.
Reconciliation with the 1.21.11 line: kept our zeroSectionBlockCounts parity
tolerance (helper adapted to the 1.20.1 LevelChunkSection(Registry) ctor).

:paper:test = 229 run, 8 failed — ALL golden-family (committed bins are still
1.21.11's; Task 6 regenerates both modules together). Everything else green.